tdf#131124 Handle ExtrudedCustomShape and FontWork

ShellMode::ExtrudedCustomShape and ShellMode::FontWork were missing in
the switch. Thus mxShapes and mxShape in the Export dialog were empty
and maSize was zero.

Change-Id: If4c2137ce85a0aef0613d9d79979cc9a58b5c115
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196456
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit a8babea4ce7f07f969e58594ab5a5afc2d190e69)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196881
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196944